# Fair-Hiring

./: .env.example  .gitignore  FEATURES.md  README.md  package.json  pnpm-lock.yaml  vercel.json
backend/: graph.py  main.py  pii.py  pyproject.toml
backend/interview/: __init__.py  aggregator.py  db.py  evaluation.py  hire.py  models.py  orchestrator.py  question_gen.py  redis_client.py  routes.py  rubrics.py  schemas.py  transcription.py  webrtc_signaling.py
docs/: SCREENING_TEST_AGENT_SPEC.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/interview/: page.tsx
frontend/components/: api-backend-banner.tsx  candidate-results.tsx  file-upload.tsx  interview-live-capture.tsx  interview-tool.tsx  jd-input.tsx  ranking-tool.tsx
scripts/: 001_create_interview_tables.sql
