[project]
name = "backend"
version = "0.1.0"
description = "Fair Hiring Network FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "pypdf>=5.1.0",
    "langchain>=0.3.7",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.50",
    "pydantic>=2.9.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "redis[hiredis]>=5.2.0",
    "aiortc>=1.9.0",
    "httpx>=0.28.0",
]
